Performed a different Dimensionality Reduction technique on the dataset

--- a/VeriBilimineGirisProje.ipynb
+++ b/VeriBilimineGirisProje.ipynb
@@ -1936,9 +1936,9 @@
      "text": [
       "\n",
       "Random Forest:\n",
-      "  En İyi Parametreler: {'max_depth': 14, 'n_estimators': 200}\n",
-      "  RMSE: 2.245241653976934\n",
-      "  R²: 0.6433615678757625\n"
+      "  En İyi Parametreler: {'max_depth': 19, 'n_estimators': 200}\n",
+      "  RMSE: 2.209887541775959\n",
+      "  R²: 0.6545045696365761\n"
      ]
     }
    ],
@@ -1997,7 +1997,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Yapay Sinir Ağı (YSA)):\n",
+      "Yapay Sinir Ağı (YSA):\n",
       "  En İyi Parametreler: {'alpha': 0.0001, 'hidden_layer_sizes': (5,)}\n",
       "  RMSE: 1.8182673151390545\n",
       "  R²: 0.7661068922281753\n"
@@ -2034,10 +2034,10 @@
     "r2_ann = r2_score(y_test, y_pred_ann)\n",
     "\n",
     "# Sonuçları 'results' listesine ekliyoruz\n",
-    "results.append({\"Model\": \"Yapay Sinir Ağı (YSA)\", \"En İyi Parametreler\": grid_ann.best_params_, \"RMSE\": rmse_ann, \"R²\": r2_ann})\n",
+    "results.append({\"Model\": \"Yapay Sinir Ağı\", \"En İyi Parametreler\": grid_ann.best_params_, \"RMSE\": rmse_ann, \"R²\": r2_ann})\n",
     "\n",
     "# Sonuçları yazdırma\n",
-    "print(\"\\nYapay Sinir Ağı (YSA)):\")\n",
+    "print(\"\\nYapay Sinir Ağı (YSA):\")\n",
     "print(f\"  En İyi Parametreler: {grid_ann.best_params_}\")  # GridSearchCV ile bulunan en iyi parametreler\n",
     "print(f\"  RMSE: {rmse_ann}\")\n",
     "print(f\"  R²: {r2_ann}\")"
@@ -2055,12 +2055,12 @@
      "text": [
       "\n",
       "Sonuç:\n",
-      "                Model                           En İyi Parametreler     RMSE       R²\n",
-      "   Doğrusal Regresyon                                       Default 1.815258 0.766880\n",
-      "        KNN Regresyon                           {'n_neighbors': 21} 3.216902 0.267888\n",
-      "                  SVR  {'C': 1, 'epsilon': 0.1, 'kernel': 'linear'} 1.811084 0.767951\n",
-      "        Random Forest        {'max_depth': 14, 'n_estimators': 200} 2.245242 0.643362\n",
-      "Yapay Sinir Ağı (YSA) {'alpha': 0.0001, 'hidden_layer_sizes': (5,)} 1.818267 0.766107\n",
+      "             Model                           En İyi Parametreler     RMSE       R²\n",
+      "Doğrusal Regresyon                                       Default 1.815258 0.766880\n",
+      "     KNN Regresyon                           {'n_neighbors': 21} 3.216902 0.267888\n",
+      "               SVR  {'C': 1, 'epsilon': 0.1, 'kernel': 'linear'} 1.811084 0.767951\n",
+      "     Random Forest        {'max_depth': 19, 'n_estimators': 200} 2.209888 0.654505\n",
+      "   Yapay Sinir Ağı {'alpha': 0.0001, 'hidden_layer_sizes': (5,)} 1.818267 0.766107\n",
       "\n",
       "En iyi model: SVR\n"
      ]
@@ -2090,6 +2090,45 @@
   {
    "cell_type": "code",
    "execution_count": 44,
+   "id": "8da39939-9d5e-435d-bf43-866438acc630",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Veri setinde 28 değişken (sütun) var.\n",
+      "Değişken isimleri: Index(['Hours_Studied', 'Attendance', 'Sleep_Hours', 'Previous_Scores',\n",
+      "       'Tutoring_Sessions', 'Physical_Activity', 'Exam_Score',\n",
+      "       'Parental_Involvement_Low', 'Parental_Involvement_Medium',\n",
+      "       'Access_to_Resources_Low', 'Access_to_Resources_Medium',\n",
+      "       'Extracurricular_Activities_Yes', 'Motivation_Level_Low',\n",
+      "       'Motivation_Level_Medium', 'Internet_Access_Yes', 'Family_Income_Low',\n",
+      "       'Family_Income_Medium', 'Teacher_Quality_Low', 'Teacher_Quality_Medium',\n",
+      "       'School_Type_Public', 'Peer_Influence_Neutral',\n",
+      "       'Peer_Influence_Positive', 'Learning_Disabilities_Yes',\n",
+      "       'Parental_Education_Level_High School',\n",
+      "       'Parental_Education_Level_Postgraduate', 'Distance_from_Home_Moderate',\n",
+      "       'Distance_from_Home_Near', 'Gender_Male'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Veri setini yükleme\n",
+    "df = pd.read_csv('StudentPerformanceFactors_transformed.csv')\n",
+    "\n",
+    "# Veri setindeki değişken sayısını öğrenme\n",
+    "num_columns = df.shape[1]\n",
+    "print(f\"Veri setinde {num_columns} değişken (sütun) var.\")\n",
+    "\n",
+    "# Veri setindeki değişken isimlerini yazdırma\n",
+    "print(\"Değişken isimleri:\", df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "id": "db2b574b-5fea-4de3-a28d-6f1668f8f85a",
    "metadata": {},
    "outputs": [
@@ -2097,6 +2136,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "PCA sonrası bileşen sayısı: 22\n",
+      "\n",
       "Performans Karşılaştırması:\n",
       "Orijinal Veri Seti - RMSE: 1.8110839841051625, R²: 0.7679512995964752\n",
       "PCA ile Azaltılmış Veri Seti - RMSE: 2.6328189316233965, R²: 0.5096073585807348\n",
@@ -2133,6 +2174,9 @@
     "X_train_pca = pca.fit_transform(X_train)\n",
     "X_test_pca = pca.transform(X_test)\n",
     "\n",
+    "# PCA sonrası bileşenlerin sayısını kontrol etme\n",
+    "print(f\"PCA sonrası bileşen sayısı: {X_train_pca.shape[1]}\")\n",
+    "\n",
     "# 2. Modeli PCA ile boyut azaltılmış veri seti ile eğitme\n",
     "svr_model_pca = SVR(C=1, epsilon=0.1, kernel='linear')  # Aynı SVR modeli\n",
     "svr_model_pca.fit(X_train_pca, y_train)\n",
@@ -2141,7 +2185,7 @@
     "r2_pca = r2_score(y_test, y_pred_pca)\n",
     "\n",
     "# Sonuçları yazdırma\n",
-    "print(\"Performans Karşılaştırması:\")\n",
+    "print(\"\\nPerformans Karşılaştırması:\")\n",
     "print(f\"Orijinal Veri Seti - RMSE: {rmse_original}, R²: {r2_original}\")\n",
     "print(f\"PCA ile Azaltılmış Veri Seti - RMSE: {rmse_pca}, R²: {r2_pca}\")\n",
     "\n",
@@ -2149,7 +2193,165 @@
     "if rmse_pca < rmse_original:\n",
     "    print(\"\\nPCA ile boyut azaltma performansı orijinal veri setinden daha iyi.\")\n",
     "else:\n",
-    "    print(\"\\nOrijinal veri seti, PCA ile boyut azaltmadan daha iyi performans gösteriyor.\")\n"
+    "    print(\"\\nOrijinal veri seti, PCA ile boyut azaltmadan daha iyi performans gösteriyor.\")\n",
+    "\n",
+    "# PCA ile boyut indirgenmiş veri setlerini kaydetme\n",
+    "columns = [f'PC{i+1}' for i in range(X_train_pca.shape[1])]  # PCA sonrası bileşen isimleri\n",
+    "train_pca_df = pd.DataFrame(X_train_pca, columns=columns)\n",
+    "train_pca_df['Exam_Score'] = y_train.reset_index(drop=True)  # Bağımlı değişkeni ekle\n",
+    "\n",
+    "test_pca_df = pd.DataFrame(X_test_pca, columns=columns)\n",
+    "test_pca_df['Exam_Score'] = y_test.reset_index(drop=True)  # Bağımlı değişkeni ekle\n",
+    "\n",
+    "# Kaydetme\n",
+    "train_pca_df.to_csv('train_pca_reduced.csv', index=False)\n",
+    "test_pca_df.to_csv('test_pca_reduced.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "56dd42cf-68c3-47bb-94b8-ffdbd82879ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Seçilen Özellikler:\n",
+      "Index(['Hours_Studied', 'Attendance', 'Previous_Scores', 'Tutoring_Sessions',\n",
+      "       'Physical_Activity', 'Parental_Involvement_Low',\n",
+      "       'Parental_Involvement_Medium', 'Access_to_Resources_Low',\n",
+      "       'Access_to_Resources_Medium', 'Motivation_Level_Low',\n",
+      "       'Internet_Access_Yes', 'Family_Income_Low', 'Family_Income_Medium',\n",
+      "       'Teacher_Quality_Low', 'Teacher_Quality_Medium',\n",
+      "       'Peer_Influence_Neutral', 'Peer_Influence_Positive',\n",
+      "       'Learning_Disabilities_Yes', 'Parental_Education_Level_High School',\n",
+      "       'Distance_from_Home_Near'],\n",
+      "      dtype='object')\n",
+      "\n",
+      "Seçilen Özelliklerin Sayısı: 20\n",
+      "\n",
+      "Özelliklerin sıralaması (en iyi en küçük sıralama değeri):\n",
+      "                                  Feature  Ranking\n",
+      "0                           Hours_Studied        1\n",
+      "22   Parental_Education_Level_High School        1\n",
+      "21              Learning_Disabilities_Yes        1\n",
+      "20                Peer_Influence_Positive        1\n",
+      "19                 Peer_Influence_Neutral        1\n",
+      "17                 Teacher_Quality_Medium        1\n",
+      "16                    Teacher_Quality_Low        1\n",
+      "15                   Family_Income_Medium        1\n",
+      "14                      Family_Income_Low        1\n",
+      "25                Distance_from_Home_Near        1\n",
+      "11                   Motivation_Level_Low        1\n",
+      "13                    Internet_Access_Yes        1\n",
+      "9              Access_to_Resources_Medium        1\n",
+      "8                 Access_to_Resources_Low        1\n",
+      "7             Parental_Involvement_Medium        1\n",
+      "6                Parental_Involvement_Low        1\n",
+      "5                       Physical_Activity        1\n",
+      "4                       Tutoring_Sessions        1\n",
+      "3                         Previous_Scores        1\n",
+      "1                              Attendance        1\n",
+      "10         Extracurricular_Activities_Yes        2\n",
+      "23  Parental_Education_Level_Postgraduate        3\n",
+      "12                Motivation_Level_Medium        4\n",
+      "24            Distance_from_Home_Moderate        5\n",
+      "2                             Sleep_Hours        6\n",
+      "18                     School_Type_Public        7\n",
+      "26                            Gender_Male        8\n",
+      "\n",
+      "Seçilmeyen Özellikler:\n",
+      "10           Extracurricular_Activities_Yes\n",
+      "23    Parental_Education_Level_Postgraduate\n",
+      "12                  Motivation_Level_Medium\n",
+      "24              Distance_from_Home_Moderate\n",
+      "2                               Sleep_Hours\n",
+      "18                       School_Type_Public\n",
+      "26                              Gender_Male\n",
+      "Name: Feature, dtype: object\n",
+      "\n",
+      "Performans Karşılaştırması:\n",
+      "Orijinal Veri Seti - RMSE: 1.8110839841051625, R²: 0.7679512995964752\n",
+      "RFE ile Azaltılmış Veri Seti - RMSE: 1.849642714633611, R²: 0.7579652896496547\n",
+      "\n",
+      "Orijinal veri seti, RFE ile boyut azaltmadan daha iyi performans gösteriyor.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_selection import RFE\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Veri setini yükleme\n",
+    "df = pd.read_csv('StudentPerformanceFactors_transformed.csv')\n",
+    "\n",
+    "# Bağımsız ve bağımlı değişkenleri ayırma\n",
+    "X = df.drop(columns=['Exam_Score'])\n",
+    "y = df['Exam_Score']\n",
+    "\n",
+    "# Eğitim ve test setlerini ayırma\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# RFE ile özellik seçimi\n",
+    "svr_model = SVR(C=1, epsilon=0.1, kernel='linear')  # En iyi hiperparametrelerle SVR modeli\n",
+    "rfe = RFE(estimator=svr_model, n_features_to_select=20)  # 20 özellik seçiyoruz\n",
+    "rfe.fit(X_train, y_train)\n",
+    "\n",
+    "# Seçilen özellikler\n",
+    "selected_features = X_train.columns[rfe.support_]\n",
+    "print(f\"Seçilen Özellikler:\\n{selected_features}\")\n",
+    "\n",
+    "# Seçilen özelliklerin sayısını yazdırma\n",
+    "print(f\"\\nSeçilen Özelliklerin Sayısı: {len(selected_features)}\")\n",
+    "\n",
+    "# Özellik sıralamasını yazdırma\n",
+    "ranking = rfe.ranking_\n",
+    "features = X_train.columns\n",
+    "ranking_df = pd.DataFrame({'Feature': features, 'Ranking': ranking})\n",
+    "ranking_df = ranking_df.sort_values(by='Ranking')\n",
+    "\n",
+    "print(\"\\nÖzelliklerin sıralaması (en iyi en küçük sıralama değeri):\")\n",
+    "print(ranking_df)\n",
+    "\n",
+    "# Seçilmeyen özellikler\n",
+    "not_selected_features = ranking_df[ranking_df['Ranking'] > 1]['Feature']\n",
+    "print(f\"\\nSeçilmeyen Özellikler:\\n{not_selected_features}\")\n",
+    "\n",
+    "# Yeni veri setini oluşturma (sadece seçilen özellikler)\n",
+    "X_train_rfe = rfe.transform(X_train)\n",
+    "X_test_rfe = rfe.transform(X_test)\n",
+    "\n",
+    "# Modeli RFE ile boyut azaltılmış veri seti ile eğitme\n",
+    "svr_model_rfe = SVR(C=1, epsilon=0.1, kernel='linear')  # Aynı hiperparametreler\n",
+    "svr_model_rfe.fit(X_train_rfe, y_train)\n",
+    "y_pred_rfe = svr_model_rfe.predict(X_test_rfe)\n",
+    "\n",
+    "# Performans karşılaştırması\n",
+    "rmse_rfe = np.sqrt(mean_squared_error(y_test, y_pred_rfe))\n",
+    "r2_rfe = r2_score(y_test, y_pred_rfe)\n",
+    "\n",
+    "print(\"\\nPerformans Karşılaştırması:\")\n",
+    "print(f\"Orijinal Veri Seti - RMSE: {rmse_original}, R²: {r2_original}\")\n",
+    "print(f\"RFE ile Azaltılmış Veri Seti - RMSE: {rmse_rfe}, R²: {r2_rfe}\")\n",
+    "\n",
+    "# Performansı karşılaştırma\n",
+    "if rmse_rfe < rmse_original:\n",
+    "    print(\"\\nRFE ile boyut azaltma performansı orijinal veri setinden daha iyi.\")\n",
+    "else:\n",
+    "    print(\"\\nOrijinal veri seti, RFE ile boyut azaltmadan daha iyi performans gösteriyor.\")\n",
+    "\n",
+    "# Yeni veri setlerini kaydetme\n",
+    "train_rfe_df = pd.DataFrame(X_train_rfe, columns=selected_features)\n",
+    "train_rfe_df['Exam_Score'] = y_train.reset_index(drop=True)  # Bağımlı değişkeni ekle\n",
+    "train_rfe_df.to_csv('train_rfe_reduced.csv', index=False)\n",
+    "\n",
+    "test_rfe_df = pd.DataFrame(X_test_rfe, columns=selected_features)\n",
+    "test_rfe_df['Exam_Score'] = y_test.reset_index(drop=True)  # Bağımlı değişkeni ekle\n",
+    "test_rfe_df.to_csv('test_rfe_reduced.csv', index=False)"
    ]
   }
  ],
